extensions/gatekeeper/bundle/config/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    admission.gatekeeper.sh/ignore: no-self-managing
    control-plane: controller-manager
    gatekeeper.sh/system: "yes"
  name: #@ data.values.namespace
