extensions/gatekeeper/bundle/config/gatekeeper-service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  labels:
    gatekeeper.sh/system: "yes"
  name: gatekeeper-webhook-service
  namespace: #@ data.values.namespace
  annotations:
    kapp.k14s.io/change-group: "tce.gatekeeper/svc"
    kapp.k14s.io/change-rule: "upsert after upserting tce.gatekeeper/secret"
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
    gatekeeper.sh/system: "yes"
